feat: Implementacion UserAuth Test CP1,2,6,7,8